--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '2.3.2'
+version = '1.16.5-2.3.3'
 group = 'xyz.marstonconnell.randomloot' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'randomloot'
 
